--- a/guns-admin/src/main/resources/application.yml
+++ b/guns-admin/src/main/resources/application.yml
@@ -45,10 +45,10 @@ log:
 spring:
   profiles: local
   datasource:
-    url: jdbc:mysql://192.168.0.101:3306/guns4_0?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://192.168.0.101:3306/faceidentify?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
     username: root
     password: root
-    db-name: guns4_0 #用来搜集数据库的所有表
+    db-name: faceidentify #用来搜集数据库的所有表
     filters: wall,mergeStat
 
 #多数据源情况的配置
