--- a/guns-admin/src/main/resources/application.yml
+++ b/guns-admin/src/main/resources/application.yml
@@ -15,8 +15,8 @@ server:
 guns:
   swagger-open: true              #是否开启swagger (true/false)
   kaptcha-open: false             #是否开启登录时验证码 (true/false)
-#  file-upload-path: D:/faceidentify/img       #文件上传目录(不配置的话为java.io.tmpdir目录)
-  file-upload-path: /hyxt/choujiang/api/faceimg       #文件上传目录(不配置的话为java.io.tmpdir目录)
+  file-upload-path: D:/faceidentify/img       #文件上传目录(不配置的话为java.io.tmpdir目录)
+#  file-upload-path: /hyxt/choujiang/api/faceimg       #文件上传目录(不配置的话为java.io.tmpdir目录)
 #  file-upload-path: d:/tmp       #文件上传目录(不配置的话为java.io.tmpdir目录)
   spring-session-open: false      #是否开启spring session,如果是多机环境需要开启(true/false)
   session-invalidate-time: 1800     #session失效时间(只在单机环境下生效，多机环境在SpringSessionConfig类中配置) 单位：秒
@@ -57,11 +57,11 @@ log:
 spring:
   profiles: local
   datasource:
-#    url: jdbc:mysql://127.0.0.1:3306/faceidentify?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
-    url: jdbc:mysql://47.104.252.24:3306/faceidentify?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
+    url: jdbc:mysql://127.0.0.1:3306/faceidentify?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
+#    url: jdbc:mysql://47.104.252.24:3306/faceidentify?autoReconnect=true&useUnicode=true&characterEncoding=utf8&zeroDateTimeBehavior=CONVERT_TO_NULL&useSSL=false&serverTimezone=UTC
     username: root
-#    password: root
-    password: Cdxxkj@123
+    password: root
+#    password: Cdxxkj@123
     db-name: faceidentify #用来搜集数据库的所有表
     filters: wall,mergeStat
 
